# alumni_hub_backend

./: .env  Cargo.toml  README.md  diesel.toml
src/: db.rs  errors.rs  main.rs  schema.rs
src/handlers/: alumni_handler.rs  auth_handler.rs  mod.rs  staff_handler.rs
src/models/: alumni.rs  gender.rs  mod.rs  staff.rs
src/services/: alumni_service.rs  auth_service.rs  mod.rs  staff_service.rs
src/utils/: auth_utils.rs  mod.rs  naive_date_time.rs
