[package]
name = "alumni_hub_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
hyper = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-postgres = "0.7"
deadpool-postgres = "0.13.2"
dotenv = "0.15.0"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
bcrypt = "0.15.1"
config = "0.14.0"
once_cell = "1.19.0"
anyhow = "1.0.68"
r2d2 = "0.8.10"
serde_qs = "0.7"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
tower-http = { version = "0.3", features = ["cors"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = "0.4.38"
