[package]
name = "alumni_hub_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "tokio", "http2"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
hyper = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-postgres = "0.7"
deadpool-postgres = "0.14.0"
dotenv = "0.15.0"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "serde_json"] }
bcrypt = "0.15.1"
config = "0.14.0"
once_cell = "1.19.0"
anyhow = "1.0.68"
r2d2 = "0.8.10"
serde_qs = "0.13.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "runtime-tokio-native-tls", "macros", "time", "chrono"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.22", features = ["serde"] }
syn = { version = "2.0.66", features = ["full", "extra-traits"] }
jsonwebtoken = "9.3.0"
async-trait = "0.1.80"
serde_with = "3.8.1"
thiserror = "1.0.61"